# dj-layouts

./: .gitignore  .tool-versions  AI-DISCLOSURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish-test.yml  publish.yml
dj_layouts/: __init__.py  apps.py  autodiscover.py  base.py  cache.py  checks.py  context.py  decorators.py  detection.py  errors.py  mixins.py  panels.py  queues.py  rendering.py  request_utils.py  settings.py  wagtail.py
dj_layouts/services/: requests.py
dj_layouts/templates/layouts/: error.html
dj_layouts/templatetags/: layouts.py
docs/: async.md  caching.md  concepts.md  decorators.md  error-handling.md  getting-started.md  index.md  layout-context.md  layouts-plan.md  layouts.md  panels.md  partial-detection.md  patterns.md  render-queues.md  request-attributes.md  security.md  settings.md  wagtail.md
docs/layouts-phases/: 00-overview.md  01-sync-core.md  02-async.md  03-queues.md  04-caching.md  05-partial-detection.md  06-wagtail.md
example_project/: manage.py  settings.py  urls.py  views.py
src/dj_layouts/: apps.py  request_utils.py
src/dj_layouts/templates/layouts/: error.html
tests/: conftest.py  settings.py  test_async.py  test_base.py  test_cache.py  test_checks.py  test_context.py  test_decorators.py  test_detection.py  test_errors.py  test_htmx_smart_routing.py  test_layouts.py  test_mixins.py  test_panels.py  test_queues.py  test_rendering.py  test_request_utils.py  test_templatetags.py  test_wagtail.py
